--- a/_posts/2019-06-01-blog-post-9.md
+++ b/_posts/2019-06-01-blog-post-9.md
@@ -57,7 +57,7 @@ I set lofty goals for myself in terms of working out, and ultimately didn't achi
 
 Green Key Weekend
 ------
-I had a good time hanging out at Tri-Kap for green key weekend. We have a barbeque, I went to Brewhaha at O-Farm, playing poker with Kevin Yang and Jerry Wang and friends, and played poker at Lebanon Poker Room (on the third hand, I went all in with Kings and got called by Q-10 Suited, and he sucked out on me). 
+I had a good time hanging out at Tri-Kap for green key weekend. We had a barbeque, I went to Brewhaha at O-Farm, and I played poker with Kevin Yang and Jerry Wang and friends, and played poker at Lebanon Poker Room (on the third hand, I went all in with Kings and got called by Q-10 Suited, and he sucked out on me). 
 
 Reading
 ------
@@ -90,6 +90,9 @@ Closing
 ------
 I visited Montreal and ICLR, which were fun experiences, but perhaps they distracted me from work too much. Overall I had a good time though.
 
+Songs
+------
+* [Repose IV](https://www.youtube.com/watch?v=hFvDlh8vrP4&t=205s) by MrOtterMusic: Topliff 206 vibes
 
 
 
