update with emnlp

--- a/_drafts/2019-06-01-blog-post-9.md
+++ b/_drafts/2019-06-01-blog-post-9.md
@@ -1,7 +1,7 @@
 ---
 title: 'Summer in SF'
-date: 2019-06-01
-permalink: /posts/2019/6/blog-post-9/
+date: 2019-09-01
+permalink: /posts/2019/9/blog-post-9/
 tags:
   - dartmouth
   - machine learning
@@ -14,12 +14,16 @@ I spent the summer in San Francisco working as a software engineering intern at 
 
 Blend
 ------
-
+I don't really have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same)
 
 San Francisco
 ------
 
 The first weekend, I went to Land's End with some Blend Interns, the [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) with my friend Yifei, and met up with my cousin Jeanine for dinner. 
+
+I took a day trip to Yosemite with my friends Kevin, Sosa, Anna, and Nour. I arrived at Kevin's house at midnight on friday night, slept for about 3 hours, and woke up at 3:30am to drive to Merced for the 5:30am bus to Yosemite. We slept a bit more on the bus and then arrived butt-early in the park at 8:30am. I couldn't hike because of my IT band injury, so Nour, Kevin, and I decided to hitchhike from the visitor center in the valley floor to Glacier point at the top of the valley. We waited for about 20 minutes before a hispanic man picked us up. He said he had no plans, so he drove us to the top and we went for a short hike on the valley floor near El Capitan. We met up with Sosa and Anna at Glacier point around noon, and ate lunch at the gift shop and took a nap on a big rock. Later, Sosa, Nour, and I hitchhiked back down, where a rich businessman and his wife gave us a ride in their sweet Lexus. We really appreciated that they went one-hour out of their way to take us back to the visitor center.
+
+I'm inspired that people gave us rides for no benefit of their own; both people who picked us up said they had never picked up hitchhikers before. I wonder what led them to do so for us.
 
 Fitness
 ------
@@ -27,28 +31,37 @@ Fitness
 
 Places
 ------
-* Facebook Campus (Jul 5)
+* Palo Alto (Jul 21)
+* Yosemite National Park (Jul 20)
+* Marin (Jul 15) has an amazing view of the Golden Gate Bridge.
+* Stanford University (Jul 14) is a resort.
+* Treasure Island (Jul 13) has incredible views of the skyline.
+* Facebook Menlo Park (Jul 5)
 * Fisherman's Wharf (Jul 4)
-* Muir Woods (Jun 31)
-* [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) (Jun 30)
+* Muir Woods (Jun 31) is like Endor from Star Wars.
+* [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) (Jun 30) offers a relaxing escape from the constant stimuli of city life.
 * Land's End (Jun 30)
+* Dartmouth Entrepreneurial Network Dinners (Angelist, The Wing, Doordash)
 
 Restaurants I would go to again
 ------
+* 707 Sutter St
 * [China Live](https://www.opentable.com/r/china-live-san-francisco)
 
 Reading
 ------
 
-**Waking Up.** 
+**Waking Up by Sam Harris.** Waking up takes a scientific approach to spirituality. Harris details how to use meditation to recognize that the self is an illusion. So, instead of being distracted by thoughts, becoming mindful means to experience more clearly and to "recognize thoughts for what they are." My interpretation of the book is that there's some large set of all possible human experiences, and daily life only occupies a small range of that large set. But using mediation, and also with drugs, as Harris talks about later, you can have experiences in a different axis in that experience space that you didn't know existed. 
+
+Harris also makes a strong argument for psychedelics that I found intruiging. He sees them as a sure way to alter consciousness and says that they're "indespensible for people who need convincing that profound changes in consciousness are possible", calling them "one of the most important rites of passage a human being experience." In terms of positive experiences, he says psychedelics can "disclose layers of beauty that art is powerless to capture and for which the beauty of nature itself is a mere simulacrum." Of the negative experience, he warns, "I think it may be impossible to imagine what it is like to suffer from mental illness without having briefly touched its shores."
+
+Throughout the book, I felt, having never done psychedelics, that the concepts he talked about were intangible; I was often confused with the organization of the book and how the pieces fit together.
 
 Who are my heroes?
 ------
-
-* [Patrick Shyu](https://www.youtube.com/watch?v=XA3Qjnhvdvs) gives great life advice for young people who want to get into tech.
-* [Jeff Nippard](https://www.youtube.com/user/icecream4PRs) makes scientific body building videos, and [Chris Heria](https://www.youtube.com/watch?v=5O-yMbS1bRc) makes great calisthenics videos.
-* I enjoy mixes by [MrOtterMusic](https://www.youtube.com/channel/UCa9852OG1OJwMYAi7Arb2ag). 
-* I like [Big Boy](https://www.youtube.com/channel/UCIvmsk_sRPG98hwSh2lFCFg). 
+* [Aaron Marino](https://www.youtube.com/user/AlphaMconsulting) is good at life. 
+* My mentor from Blend, [Danny](https://blog.bossylobster.com/about-me), knows so much about web development, works so efficiently, has so much working memory, and has amazing work/life balance.
+* The Blend CTO, [Eugene Marinelli](https://www.linkedin.com/in/eugene-marinelli/), is also a really strong powerlifter. 
 
 Closing
 ------
@@ -56,7 +69,7 @@ Closing
 
 Songs
 ------
-* [Repose IV](https://www.youtube.com/watch?v=hFvDlh8vrP4&t=205s) by MrOtterMusic: Topliff 206 vibes
+* [Best of Eden](https://www.youtube.com/watch?v=coo0t513Tek&t=4925s) by MrOtterMusic is absolutely the sappiest and my favorite remix I've ever listened to.
 
 
 
