add some tagging?

--- a/_drafts/2019-06-01-blog-post-9.md
+++ b/_drafts/2019-06-01-blog-post-9.md
@@ -14,23 +14,44 @@ I spent the summer in San Francisco working as a software engineering intern at 
 
 Blend
 ------
-I don't really have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same)
+I have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same). 
+
+For the Blend Hackathon, I teamed up with another intern, a support engineer, and people from Business Ops, Client Ops, and Sales. My original idea was to go around the second floor (non-engineers) and see what I could automate with ML, but eventually we decided that we could create a functionality to automatically send feedback surveys to clients after working with them, and have the feedback integrate automatically with Salesforce and Slack. We won the Honorable Mention - People's Choice award! The prize was $750 for us to have a Michelin-starred dinner. 
+
+At Blend, I first worked on the service template, making edits to how the code worked and 
+
+We had some great intern events:
+- Escape the room: pretty fun and a great dinner afterwards.
+- Karaoke: a lot of fun.
+- Cooking class: made some great pasta and had a really good eggplant appetizer.
+
 
 San Francisco
 ------
 
 The first weekend, I went to Land's End with some Blend Interns, the [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) with my friend Yifei, and met up with my cousin Jeanine for dinner. 
 
-I took a day trip to Yosemite with my friends Kevin, Sosa, Anna, and Nour. I arrived at Kevin's house at midnight on friday night, slept for about 3 hours, and woke up at 3:30am to drive to Merced for the 5:30am bus to Yosemite. We slept a bit more on the bus and then arrived butt-early in the park at 8:30am. I couldn't hike because of my IT band injury, so Nour, Kevin, and I decided to hitchhike from the visitor center in the valley floor to Glacier point at the top of the valley. We waited for about 20 minutes before a hispanic man picked us up. He said he had no plans, so he drove us to the top and we went for a short hike on the valley floor near El Capitan. We met up with Sosa and Anna at Glacier point around noon, and ate lunch at the gift shop and took a nap on a big rock. Later, Sosa, Nour, and I hitchhiked back down, where a rich businessman and his wife gave us a ride in their sweet Lexus. We really appreciated that they went one-hour out of their way to take us back to the visitor center.
+Travels
+------
 
-I'm inspired that people gave us rides for no benefit of their own; both people who picked us up said they had never picked up hitchhikers before. I wonder what led them to do so for us.
+**Yosemite.** I took a day trip to Yosemite with my friends Kevin, Sosa, Anna, and Nour. I arrived at Kevin's house at midnight on friday night, slept for about 3 hours, and woke up at 3:30am to drive to Merced for the 5:30am bus to Yosemite. We slept a bit more on the bus and then arrived butt-early in the park at 8:30am. I couldn't hike because of my IT band injury, so Nour, Kevin, and I decided to hitchhike from the visitor center in the valley floor to Glacier point at the top of the valley. We waited for about 20 minutes before a hispanic man picked us up. He said he had no plans, so he drove us to the top and we went for a short hike on the valley floor near El Capitan. We met up with Sosa and Anna at Glacier point around noon, and ate lunch at the gift shop and took a nap on a big rock. Later, Sosa, Nour, and I hitchhiked back down, where a rich businessman and his wife gave us a ride in their sweet Lexus. We really appreciated that they went one-hour out of their way to take us back to the visitor center. I'm inspired that people gave us rides for no benefit of their own; both people who picked us up said they had never picked up hitchhikers before. I wonder what led them to do so for us.
+
+**Lake Tahoe.** The weekend of August 16-18, I went to Tubestock Lake Tahoe, which was organized by a Blend employee and Dartmouth alum Brendan at the Dartmouth Outing Club of Northern California's cabin. More than twenty young alumni and current students went, and it was a blast. The weather was great, and we spent the saturday playing poker, tubing, then playing Mafia. The vibe was so good. 
+
+Research
+------
+My paper on data augmentation in NLP was accepted to EMNLP-IJCNLP! (EMNLP is a top 2 conference in NLP.) My first big paper acceptance. ACL actually rejected this paper, so it was interesting to see the variation in reviewership. Jason: 1, Jason from last quarter: 0. 
+
+With my advisor Saeed, I finished up the paper for our colorectal polyp classification study and advised my brother on his study on CycleGAN for colorectal histology images. 
 
 Fitness
 ------
-
+I got a membership at the Chinatown YCMA, and tried to lift at around 5. I hurt my knee after playing volleyball and spikeball at the summer picnic, which set me back mentally.
 
 Places
 ------
+* Lake Tahoe (Aug 16-18)
+* Greylock Tech Fair @ Oracle Park (Jul 30)
 * Palo Alto (Jul 21)
 * Yosemite National Park (Jul 20)
 * Marin (Jul 15) has an amazing view of the Golden Gate Bridge.
@@ -42,10 +63,12 @@ Places
 * [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) (Jun 30) offers a relaxing escape from the constant stimuli of city life.
 * Land's End (Jun 30)
 * Dartmouth Entrepreneurial Network Dinners (Angelist, The Wing, Doordash)
+* Office visits: Doordash, Coda, Neeva, Figma, Ike, HVC
+* Bars: Barbarosa, Harper & Rye
 
-Restaurants I would go to again
+Good Restaurants
 ------
-* 707 Sutter St
+* [707 Sutter](https://www.yelp.com/biz/707-sutter-san-francisco) is amazing Korean BBQ
 * [China Live](https://www.opentable.com/r/china-live-san-francisco)
 
 Reading
@@ -62,10 +85,14 @@ Who are my heroes?
 * [Aaron Marino](https://www.youtube.com/user/AlphaMconsulting) is good at life. 
 * My mentor from Blend, [Danny](https://blog.bossylobster.com/about-me), knows so much about web development, works so efficiently, has so much working memory, and has amazing work/life balance.
 * The Blend CTO, [Eugene Marinelli](https://www.linkedin.com/in/eugene-marinelli/), is also a really strong powerlifter. 
+* [Doug Polk](https://www.youtube.com/channel/UCyI7FNTudkyALBh9N7hwI9Q)'s line of thinking inspires me.
+* [ice1cube](https://www.youtube.com/user/ice1cubed) is a old school asian youtuber. 
 
 Closing
 ------
 
+This [quote](https://medium.com/@nntaleb/commencement-address-american-university-in-beirut-2016-a5c6d57984b) from Nassim Taleb resonated with me: 
+"If something is nonsense, you say it and say it loud. You will be harmed a little but will be antifragile — in the long run people who need to trust you will trust you."
 
 Songs
 ------
