update writing tips, etc

--- a/_drafts/2019-09-13-blog-post-10.md
+++ b/_drafts/2019-09-13-blog-post-10.md
@@ -14,15 +14,17 @@ I spent the summer in San Francisco working as a software engineering intern at 
 
 Blend
 ------
-I have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same). 
+I don't have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same). 
 
-For the Blend Hackathon, I teamed up with another intern, a support engineer, and people from Business Ops, Client Ops, and Sales. My original idea was to go around the second floor (non-engineers) and see what I could automate with ML, but eventually we decided that we could create a functionality to automatically send feedback surveys to clients after working with them, and have the feedback integrate automatically with Salesforce and Slack. We won the Honorable Mention - People's Choice award! The prize was $750 for us to have a Michelin-starred dinner. 
+For the Blend Hackathon, I teamed up with another intern, a support engineer, and people from Business Ops, Client Ops, and Sales. My original idea was to go around the second floor (non-engineers) and see what I could automate with ML, but eventually we decided that to create a program to automatically send feedback surveys to clients after working with them, and have the feedback integrate automatically with Salesforce and Slack. We won the Honorable Mention - People's Choice award! The prize was $750 for us to have a Michelin-starred dinner. 
 
 At Blend, I first worked on the service template, making edits to how the code worked and 
 
-We had some great intern events:
+We had some great company/team/intern events:
+- Pottery making: like 1st grade.
+- Company picnic: a lot of fun.
 - Escape the room: pretty fun and a great dinner afterwards.
-- Karaoke: a lot of fun.
+- Karaoke: good times.
 - Cooking class: made some great pasta and had a really good eggplant appetizer.
 
 
@@ -40,7 +42,7 @@ Travels
 
 Research
 ------
-My paper on data augmentation in NLP was accepted to EMNLP-IJCNLP! (EMNLP is a top 2 conference in NLP.) My first big paper acceptance. ACL actually rejected this paper, so it was interesting to see the variation in reviewership. Jason: 1, Jason from last quarter: 0. 
+My paper on data augmentation in NLP was accepted to EMNLP-IJCNLP! (EMNLP is a top 3 conference in NLP.) My first big paper acceptance. ACL actually rejected this paper, so it was interesting to see the variation in reviewership. Jason: 1, Jason from last quarter: 0. 
 
 With my advisor Saeed, I finished up the paper for our colorectal polyp classification study and advised my brother on his study on CycleGAN for colorectal histology images. 
 
@@ -50,6 +52,9 @@ I got a membership at the Chinatown YCMA, and tried to lift at around 5. I hurt 
 
 Places
 ------
+* Mission Dolores Park (Sep 1)
+* Vive Church (Sep 1)
+* Giants vs Padres Game @ Oracle Park(Aug 29)
 * Lake Tahoe (Aug 16-18)
 * Greylock Tech Fair @ Oracle Park (Jul 30)
 * Palo Alto (Jul 21)
@@ -62,14 +67,15 @@ Places
 * Muir Woods (Jun 31) is like Endor from Star Wars.
 * [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) (Jun 30) offers a relaxing escape from the constant stimuli of city life.
 * Land's End (Jun 30)
-* Dartmouth Entrepreneurial Network Dinners (Angelist, The Wing, Doordash)
-* Office visits: Doordash, Coda, Neeva, Figma, Ike, HVC
-* Bars: Barbarosa, Harper & Rye
+* Dartmouth Entrepreneurial Network Dinners (Angellist, The Wing, Doordash)
+* Office visits: Doordash, Coda, Neeva, Figma, Ike, HVF, Vectordash
+* Bars: Barbarosa, Harper & Rye, Local Edition
 
 Good Restaurants
 ------
 * [707 Sutter](https://www.yelp.com/biz/707-sutter-san-francisco) is amazing Korean BBQ
 * [China Live](https://www.opentable.com/r/china-live-san-francisco)
+* [R&G Lounge](https://rnglounge.com/)
 
 Reading
 ------
@@ -82,11 +88,13 @@ Throughout the book, I felt, having never done psychedelics, that the concepts h
 
 Who are my heroes?
 ------
-* [Aaron Marino](https://www.youtube.com/user/AlphaMconsulting) is good at life. 
 * My mentor from Blend, [Danny](https://blog.bossylobster.com/about-me), knows so much about web development, works so efficiently, has so much working memory, and has amazing work/life balance.
 * The Blend CTO, [Eugene Marinelli](https://www.linkedin.com/in/eugene-marinelli/), is also a really strong powerlifter. 
-* [Doug Polk](https://www.youtube.com/channel/UCyI7FNTudkyALBh9N7hwI9Q)'s line of thinking inspires me.
+* [Doug Polk](https://www.youtube.com/channel/UCyI7FNTudkyALBh9N7hwI9Q)'s way of thinking inspires me.
 * [ice1cube](https://www.youtube.com/user/ice1cubed) is a old school asian youtuber. 
+* I love [Lady Gaga](https://www.youtube.com/watch?v=etjiqgU0_lI).
+* [Aaron Marino](https://www.youtube.com/user/AlphaMconsulting) is good at life.
+* Cal Newport 
 
 Closing
 ------
