blog post 9 first draft

--- a/_posts/2019-06-01-blog-post-9.md
+++ b/_posts/2019-06-01-blog-post-9.md
@@ -57,7 +57,7 @@ I set lofty goals for myself in terms of working out, and ultimately didn't achi
 
 Green Key Weekend
 ------
-I had a good time hanging out at Tri-Kap for green key weekend. We had a barbeque, I went to Brewhaha at O-Farm, and I played poker with Kevin Yang and Jerry Wang and friends, and played poker at Lebanon Poker Room (on the third hand, I went all in with Kings and got called by Q-10 Suited, and he sucked out on me). 
+I had a good time hanging out at Tri-Kap for green key weekend. We had a barbeque, I went to Brewhaha at O-Farm, and I played poker with Kevin and Jerry Wang and friends, and played poker at Lebanon Poker Room (on the third hand, I went all in with Kings and got called by Q-10 Suited, and he sucked out on me). 
 
 Reading
 ------
@@ -89,6 +89,13 @@ Who are my heroes?
 Closing
 ------
 I visited Montreal and ICLR, which were fun experiences, but perhaps they distracted me from work too much. Overall I had a good time though.
+
+I became closer friends with my Sophomore Fall roommate, Jonas, who I visted in Lithuania and came to visit me in Denmark last fall. We spent many nights sitting on the Green just talking about life, had lunch often, and went to Boston Lot together. He's taking a gap year next year and I'll miss him dearly.
+
+<img src='/images/jonas/jonas_1.jpg' width="31%">
+<img src='/images/jonas/jonas_2.jpg' width="31%">
+<img src='/images/jonas/boston_lot.jpg' width="31%">
+Left and middle, the Tri-Kap kitchen; right, Boston Lot.
 
 Songs
 ------
