--- a/_drafts/2019-09-13-blog-post-10.md
+++ b/_drafts/2019-09-13-blog-post-10.md
@@ -3,79 +3,133 @@ title: 'Summer in SF'
 date: 2019-09-01
 permalink: /posts/2019/9/blog-post-9/
 tags:
-  - dartmouth
-  - machine learning
-  - iclr
-  - montreal
-  - fitness
+  - blend
+  - san francisco
+  - software engineering
+  - yosemite
+  - emnlp
 ---
 
-I spent the summer in San Francisco working as a software engineering intern at Blend. 
+I spent the summer in San Francisco working as a software engineering intern at Blend. Like some other terms, I grew tremendously, both personally and professionally.
 
 Blend
 ------
-I don't have a background in software, and coming out to the Bay Area and meeting a lot of other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The standard for technical competence is simply uncomparable. (imposter syndrome, a lot of other dartmouth people who have more software experience than me have said that they feel the same). 
+Interning at blend was my first experience in web development, and coming out to the Bay Area and meeting other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The difference in technical ability is obvious, and I definitely felt imposter syndrome at times. (Some other dartmouth grads also said that they felt similarly.) 
 
-For the Blend Hackathon, I teamed up with another intern, a support engineer, and people from Business Ops, Client Ops, and Sales. My original idea was to go around the second floor (non-engineers) and see what I could automate with ML, but eventually we decided that to create a program to automatically send feedback surveys to clients after working with them, and have the feedback integrate automatically with Salesforce and Slack. We won the Honorable Mention - People's Choice award! The prize was $750 for us to have a Michelin-starred dinner. 
+I really enjoyed working at Blend, however. The culture is great, with flexible hours and not too much pressure, and I had many opportunities for bonding with co-workers and other interns such as having lunch together, playing ping pong, doing 1-1's, off-sites, blubs (blend clubs), and intern events. I first worked on the TypeScript service template, implementing `config` as an object instead of a module and changing the linter from TSLint to ESLint. For the second half of my internship, I created an error tracker library to facilitate our migration from Airbrake to Sentry. The best part of my internship was learning from my mentor Danny, who is an incredibly talented engineer. I improved substantially over the summer but still have a long way to go in terms of coding style, system design, reading and coding speed, and overall productivity. 
 
-At Blend, I first worked on the service template, making edits to how the code worked and 
+<img src='/images/19x/blend.jpg' width="31%">
+<img src='/images/19x/jeanine.jpg' width="31%">
+<img src='/images/19x/cute_dog.jpg' width="31%">
+Left, my desk at blend; middle, my cousin Jeanine and I; right, Bart, one of the cutest Blend dogs.
+
+For the Blend Hackathon, I formed a team called *Data Cartel* with another intern, a support engineer, and people from Business Ops, Client Ops, and Sales. I originally wanted to go around the second floor (non-engineers) and see what I could automate with ML, but eventually we decided that to create a program that automatically sends feedback surveys to clients after working with them and integrates with Salesforce and Slack. We won the Honorable Mention - People's Choice award! The prize was $750 for us to have a Michelin-starred dinner. 
 
 We had some great company/team/intern events:
-- Pottery making: like 1st grade.
+- Pottery making: like first grade.
 - Company picnic: a lot of fun.
 - Escape the room: pretty fun and a great dinner afterwards.
 - Karaoke: good times.
 - Cooking class: made some great pasta and had a really good eggplant appetizer.
+- Pier 39 at Fisherman's Wharf: [7D experiences](https://www.pier39.com/merchant/7d-experience/)
+- SPiN (table tennis bar): with #blub_pingpong.
 
+<img src='/images/19x/facebook.jpg' width="31%">
+<img src='/images/19x/interns_1.jpg' width="31%">
+<img src='/images/19x/surf_and_turf.jpg' width="31%">
+<img src='/images/19x/spin.jpg' width="31%">
+<img src='/images/19x/interns_2.jpg' width="31%">
+<img src='/images/19x/cooking_class.jpg' width="31%">
+Top left, my friend Kevin and I visited facebook in menlo park; top middle, the interns at Escape The Room; top right, dinner after our last intern event. Bottom left, SPiN table tennis bar, bottom middle, interns at Fisherman's Wharf; bottom right, intern cooking class.
 
 San Francisco
 ------
 
-The first weekend, I went to Land's End with some Blend Interns, the [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) with my friend Yifei, and met up with my cousin Jeanine for dinner. 
+I have mixed feelings about San Francisco. Being in a city is a lot of constant stimuli, there's a lot of homeless people, and everything is expensive. I lived in a student house in Chinatown just a couple of blocks from work. The opportunities for career growth and the social scene are incredible, however. I would definitely consider living in SF after graduation, but perhaps Seattle or a smaller city like Denver would be better for me.
+
+I had many friends in the city, from Dartmouth, Tri-Kap, Blend, high school, and the student house I lived in. I became hung out frequently with Kevin and Yuxuan (Blend), Adit and Ashar (roommates), Kevin (Dartmouth), Yifei (Tri-Kap), Alex (Tri-Kap/Blend), and Abhishek (TJ). 
+
+<img src='/images/19x/bart.jpg' width="31%">
+<img src='/images/19x/chinatown.jpg' width="31%">
+<img src='/images/19x/yifei.jpg' width="31%">
+Left, the futuristic-retro-dystopian BART; middle, the street art outside my house in Chinatown; right: my friend Yifei and I. 
+
+I had my first Michellin-starred meal, our team's Hackathon prize, at Gary Danko. I got four entrees: Roast Maine Lobster with Potato Purée, Horseradish Crusted Salmon Medallion, Pork Tenderloin with Confit Pork Belly, and Seared Filet of Beef with Yukon Potatoes. The lobster with potato melted in my mouth and had so much flavor. I noticed so many details in their service such as presentation of food, folding my napkin when I went to the restroom, thick toilet paper. I'm hooked on the fine dining experience now but will do my best to avoid it.
+
+<img src='/images/19x/datacartel.jpg' width="48%">
+<img src='/images/19x/gary_danko.jpg' width="48%">
+
+
+I really enjoyed living in a student house close to Blend. My house in Chinatown was only 2 blocks from Blend, and so I spent very little time comuting and could easily go to Blend to do work on weekends. Although the house was old, my room was small, and I often had to wait to use the bathroom, it was great to be in the company of housemates and my host Shelli, who has many talents including writing, directing plays, and contortion. As a software engineering intern it can sometimes be hard to meet a diverse set of people, and so I'm happy to be able to interact with all the people in the house and even go to a 1840s themed dance party with Shelli. 
+
+<img src='/images/19x/baseball.jpg' width="31%">
+<img src='/images/19x/house_1.jpg' width="31%">
+<img src='/images/19x/housemates_1.jpg' width="31%">
+<img src='/images/19x/housemates_2.jpg' width="31%">
+<img src='/images/19x/dance_party.jpg' width="31%">
+<img src='/images/19x/shelli.jpg' width="31%">
+Top left, Giants gamme with my housemates (my first baseball game); top middle, my room; top right, Mission Dolores Park; bottom left, Market St.; bottom middle, an 1840's dance party venue; bottom left, my host Shelli and I.
+
+### Places
+
+* University of California, Berkeley
+* [Alameda Elks Lounge](http://www.peersdance.org/goldrush.html) (Sep 8) with my Airbnb host Shelli for a 1840's themed dance party; lots of performers and old people, but I had fun.
+* Imperial Spa (Sep 8): not as good as Kabuki.
+* Mission Dolores Park (Sep 1)
+* Vive Church (Sep 1)
+* Giants vs Padres Game @ Oracle Park (Aug 29)
+* Lake Tahoe (Aug 16-18)
+* Greylock Tech Fair @ Oracle Park (Jul 30)
+* Palo Alto (Jul 21)
+* **Yosemite National Park** (Jul 20)
+* **Marin** (Jul 15) has an amazing view of the Golden Gate Bridge.
+* Stanford University (Jul 14) is a resort.
+* Treasure Island (Jul 13) has incredible views of the skyline.
+* Facebook Menlo Park (Jul 5)
+* Fisherman's Wharf (Jul 4)
+* Muir Woods (Jun 31) is like Endor from Star Wars.
+* **[Kabuki Springs and Spa](https://kabukisprings.com/springs-about/)** (Jun 30) offers a relaxing escape from the constant stimuli of city life.
+* Land's End (Jun 30)
+* Dartmouth Entrepreneurial Network Dinners (Angellist, The Wing, Doordash)
+* **Office visits**: Doordash, Coda, Neeva, Figma, Ike, HVF, Vectordash
+* **Bars**: Barbarosa, Harper & Rye, **Local Edition**, Cold Drinks Bar, Pagan Idol
+
+### Good Restaurants
+
+* [707 Sutter](https://www.yelp.com/biz/707-sutter-san-francisco) is amazing Korean BBQ.
+* [R&G Lounge](https://rnglounge.com/)
+* [China Live](https://www.opentable.com/r/china-live-san-francisco)
+* [Gary Danko](http://garydanko.com/)
+* [The Front Porch](http://thefrontporchsf.com/)
+
+I highly recommend 707 Sutter and R&G Lounge.
+
+<img src='/images/19x/lands_end.jpg' width="31%">
+<img src='/images/19x/muir.jpg' width="31%">
+<img src='/images/19x/pagan_idol.jpg' width="31%">
+Left, Lands End with other interns; middle, Muir Woods; right, Pagan Idol bar. 
 
 Travels
 ------
 
 **Yosemite.** I took a day trip to Yosemite with my friends Kevin, Sosa, Anna, and Nour. I arrived at Kevin's house at midnight on friday night, slept for about 3 hours, and woke up at 3:30am to drive to Merced for the 5:30am bus to Yosemite. We slept a bit more on the bus and then arrived butt-early in the park at 8:30am. I couldn't hike because of my IT band injury, so Nour, Kevin, and I decided to hitchhike from the visitor center in the valley floor to Glacier point at the top of the valley. We waited for about 20 minutes before a hispanic man picked us up. He said he had no plans, so he drove us to the top and we went for a short hike on the valley floor near El Capitan. We met up with Sosa and Anna at Glacier point around noon, and ate lunch at the gift shop and took a nap on a big rock. Later, Sosa, Nour, and I hitchhiked back down, where a rich businessman and his wife gave us a ride in their sweet Lexus. We really appreciated that they went one-hour out of their way to take us back to the visitor center. I'm inspired that people gave us rides for no benefit of their own; both people who picked us up said they had never picked up hitchhikers before. I wonder what led them to do so for us.
 
-**Lake Tahoe.** The weekend of August 16-18, I went to Tubestock Lake Tahoe, which was organized by a Blend employee and Dartmouth alum Brendan at the Dartmouth Outing Club of Northern California's cabin. More than twenty young alumni and current students went, and it was a blast. The weather was great, and we spent the saturday playing poker, tubing, then playing Mafia. The vibe was so good. 
+<img src='/images/19x/yosemite_1.jpg' width="31%">
+<img src='/images/19x/yosemite_2.jpg' width="31%">
+<img src='/images/19x/yosemite_3.jpg' width="31%">
+Left, Yosemite falls; middle and right, not sure where that is.
+
+**Lake Tahoe.** The weekend of August 16-18, I went to Tubestock Lake Tahoe, which was organized by Brendan, a Blend employee and Dartmouth alum, at the Dartmouth Outing Club of Northern California's cabin. More than twenty young alumni and current students went, and it was a blast. The weather was great, and we spent the saturday playing poker, tubing, then playing Mafia. The vibe was so good. 
 
 Research
 ------
-My paper on data augmentation in NLP was accepted to EMNLP-IJCNLP! (EMNLP is a top 3 conference in NLP.) My first big paper acceptance. ACL actually rejected this paper, so it was interesting to see the variation in reviewership. Jason: 1, Jason from last quarter: 0. 
+My paper on data augmentation in NLP was accepted to EMNLP-IJCNLP! (EMNLP is a top-3 conference in NLP.) My first big paper acceptance. ACL actually rejected this paper, so I found the variation in reviewership interesting. Jason: 1, Jason from last quarter: 0. 
 
 With my advisor Saeed, I finished up the paper for our colorectal polyp classification study and advised my brother on his study on CycleGAN for colorectal histology images. 
 
 Fitness
 ------
-I got a membership at the Chinatown YCMA, and tried to lift at around 5. I hurt my knee after playing volleyball and spikeball at the summer picnic, which set me back mentally.
-
-Places
-------
-* Mission Dolores Park (Sep 1)
-* Vive Church (Sep 1)
-* Giants vs Padres Game @ Oracle Park(Aug 29)
-* Lake Tahoe (Aug 16-18)
-* Greylock Tech Fair @ Oracle Park (Jul 30)
-* Palo Alto (Jul 21)
-* Yosemite National Park (Jul 20)
-* Marin (Jul 15) has an amazing view of the Golden Gate Bridge.
-* Stanford University (Jul 14) is a resort.
-* Treasure Island (Jul 13) has incredible views of the skyline.
-* Facebook Menlo Park (Jul 5)
-* Fisherman's Wharf (Jul 4)
-* Muir Woods (Jun 31) is like Endor from Star Wars.
-* [Kabuki Springs and Spa](https://kabukisprings.com/springs-about/) (Jun 30) offers a relaxing escape from the constant stimuli of city life.
-* Land's End (Jun 30)
-* Dartmouth Entrepreneurial Network Dinners (Angellist, The Wing, Doordash)
-* Office visits: Doordash, Coda, Neeva, Figma, Ike, HVF, Vectordash
-* Bars: Barbarosa, Harper & Rye, Local Edition
-
-Good Restaurants
-------
-* [707 Sutter](https://www.yelp.com/biz/707-sutter-san-francisco) is amazing Korean BBQ
-* [China Live](https://www.opentable.com/r/china-live-san-francisco)
-* [R&G Lounge](https://rnglounge.com/)
+I got a membership at the Chinatown YCMA, and tried to lift at around 5, after work. I hurt my knee after playing volleyball and spikeball at the summer picnic, which set me back mentally. And then I got sick for a week. And then my gym closed for 10 days for cleaning. Looks like I always have excuses for not making gains.
 
 Reading
 ------
@@ -84,23 +138,26 @@ Reading
 
 Harris also makes a strong argument for psychedelics that I found intruiging. He sees them as a sure way to alter consciousness and says that they're "indespensible for people who need convincing that profound changes in consciousness are possible", calling them "one of the most important rites of passage a human being experience." In terms of positive experiences, he says psychedelics can "disclose layers of beauty that art is powerless to capture and for which the beauty of nature itself is a mere simulacrum." Of the negative experience, he warns, "I think it may be impossible to imagine what it is like to suffer from mental illness without having briefly touched its shores."
 
-Throughout the book, I felt, having never done psychedelics, that the concepts he talked about were intangible; I was often confused with the organization of the book and how the pieces fit together.
+Throughout the book, I felt, having never done psychedelics, that the concepts he talked about were intangible; I was often confused by the organization of the book and how the pieces fit together.
 
 Who are my heroes?
 ------
 * My mentor from Blend, [Danny](https://blog.bossylobster.com/about-me), knows so much about web development, works so efficiently, has so much working memory, and has amazing work/life balance.
 * The Blend CTO, [Eugene Marinelli](https://www.linkedin.com/in/eugene-marinelli/), is also a really strong powerlifter. 
 * [Doug Polk](https://www.youtube.com/channel/UCyI7FNTudkyALBh9N7hwI9Q)'s way of thinking inspires me.
-* [ice1cube](https://www.youtube.com/user/ice1cubed) is a old school asian youtuber. 
+* [ice1cube](https://www.youtube.com/user/ice1cubed) is a old-school asian youtuber. 
 * I love [Lady Gaga](https://www.youtube.com/watch?v=etjiqgU0_lI).
 * [Aaron Marino](https://www.youtube.com/user/AlphaMconsulting) is good at life.
-* Cal Newport 
+* Cal Newport's work output is like that of 2 or 3 people.
 
 Closing
 ------
 
 This [quote](https://medium.com/@nntaleb/commencement-address-american-university-in-beirut-2016-a5c6d57984b) from Nassim Taleb resonated with me: 
-"If something is nonsense, you say it and say it loud. You will be harmed a little but will be antifragile — in the long run people who need to trust you will trust you."
+
+*"If something is nonsense, you say it and say it loud. You will be harmed a little but will be antifragile — in the long run people who need to trust you will trust you."*
+
+In ten years, five years, or maybe even one year, you will look back on your previous papers and think they're terrible. What's current you's response to that?
 
 Songs
 ------
