--- a/_posts/2019-09-13-blog-post-10.md
+++ b/_posts/2019-09-13-blog-post-10.md
@@ -16,7 +16,7 @@ Blend
 ------
 Interning at blend was my first experience in web development, and coming out to the Bay Area and meeting other interns really exposed the difference in technical education between someone like me, who has only taken one-software related course (Dartmouth has a liberal arts curriculum), and people who went to school at places like CMU and MIT. The difference in technical ability is obvious, and I definitely felt imposter syndrome at times. (Some other dartmouth grads also said that they felt similarly.) 
 
-I really enjoyed working at Blend, however. The culture is great, with flexible hours and not too much pressure, and I had many opportunities for bonding with co-workers and other interns such as having lunch together, playing ping pong, doing 1-1's, off-sites, blubs (blend clubs), and intern events. I first worked on the TypeScript service template, implementing `config` as an object instead of a module and changing the linter from TSLint to ESLint. For the second half of my internship, I created an error tracker library to facilitate our migration from Airbrake to Sentry. The best part of my internship was learning from my mentor Danny, who is an incredibly talented engineer. I improved substantially over the summer but still have a long way to go in terms of coding style, system design, reading and coding speed, and overall productivity. 
+I really enjoyed working at Blend, however. The culture is great, with flexible hours and not too much pressure, and I had many opportunities for bonding with co-workers and other interns such as having lunch together, playing ping pong, doing 1-1's, off-sites, blubs (blend clubs), and intern events. I first worked on the TypeScript service template, implementing the config as an object instead of a module and changing the linter from TSLint to ESLint. For the second half of my internship, I created an error tracker library to facilitate our migration from Airbrake to Sentry. The best part of my internship was learning from my mentor Danny, who is an incredibly talented engineer. I improved substantially over the summer but still have a long way to go in terms of coding style, system design, reading and coding speed, and overall productivity. 
 
 <img src='/images/19x/blend.jpg' width="32%">
 <img src='/images/19x/jeanine.jpg' width="32%">
@@ -32,7 +32,7 @@ We had some great company/team/intern events:
 - Karaoke: good times.
 - Cooking class: made some great pasta and had a really good eggplant appetizer.
 - Pier 39 at Fisherman's Wharf: [7D experiences](https://www.pier39.com/merchant/7d-experience/)
-- SPiN (table tennis bar): with #blub_pingpong.
+- SPiN (table tennis bar): with `#blub_pingpong`.
 
 <img src='/images/19x/facebook.jpg' width="32%">
 <img src='/images/19x/interns_1.jpg' width="32%">
@@ -40,12 +40,13 @@ We had some great company/team/intern events:
 <img src='/images/19x/spin.jpg' width="32%">
 <img src='/images/19x/interns_2.jpg' width="32%">
 <img src='/images/19x/cooking_class.jpg' width="32%">
-Top left, my friend Kevin and I visited facebook in menlo park; top middle, the interns at Escape The Room; top right, dinner after our last intern event. Bottom left, SPiN table tennis bar, bottom middle, interns at Fisherman's Wharf; bottom right, intern cooking class.
+Top left, my friend Kevin and I visited facebook in menlo park; top middle, the interns at Escape The Room; top right, dinner after our last intern event. 
+Bottom left, SPiN table tennis bar, bottom middle, interns at Fisherman's Wharf; bottom right, intern cooking class.
 
 San Francisco
 ------
 
-I have mixed feelings about San Francisco. Being in a city is a lot of constant stimuli, there's a lot of homeless people, and everything is expensive. I lived in a student house in Chinatown just a couple of blocks from work. The opportunities for career growth and the social scene are incredible, however. I would definitely consider living in SF after graduation, but perhaps Seattle or a smaller city like Denver would be better for me.
+I have mixed feelings about San Francisco. Being in a city is a lot of constant stimuli, there's a lot of homeless people, and everything is expensive. The opportunities for career growth and the social scene are incredible, however. I would definitely consider living in SF after graduation, but perhaps Seattle or a smaller city like Denver would be better for me.
 
 I had many friends in the city, from Dartmouth, Tri-Kap, Blend, high school, and the student house I lived in. I became hung out frequently with Kevin and Yuxuan (Blend), Adit and Ashar (roommates), Kevin (Dartmouth), Yifei (Tri-Kap), Alex (Tri-Kap/Blend), and Abhishek (TJ). 
 
@@ -58,7 +59,7 @@ I had my first Michellin-starred meal, our team's Hackathon prize, at Gary Danko
 
 <img src='/images/19x/datacartel.jpg' width="48%">
 <img src='/images/19x/gary_danko.jpg' width="48%">
-
+Left, the DataCartel team; right, Roast Maine Lobster with Potato Purée.
 
 I really enjoyed living in a student house close to Blend. My house in Chinatown was only 2 blocks from Blend, and so I spent very little time comuting and could easily go to Blend to do work on weekends. Although the house was old, my room was small, and I often had to wait to use the bathroom, it was great to be in the company of housemates and my host Shelli, who has many talents including writing, directing plays, and contortion. As a software engineering intern it can sometimes be hard to meet a diverse set of people, and so I'm happy to be able to interact with all the people in the house and even go to a 1840s themed dance party with Shelli. 
 
@@ -68,7 +69,8 @@ I really enjoyed living in a student house close to Blend. My house in Chinatown
 <img src='/images/19x/housemates_2.jpg' width="32%">
 <img src='/images/19x/dance_party.jpg' width="32%">
 <img src='/images/19x/shelli.jpg' width="32%">
-Top left, Giants gamme with my housemates (my first baseball game); top middle, my room; top right, Mission Dolores Park; bottom left, Market St.; bottom middle, an 1840's dance party venue; bottom left, my host Shelli and I.
+Top left, Giants gamme with my housemates (my first baseball game); top middle, my room; top right, Mission Dolores Park.
+Bottom left, Market St.; bottom middle, an 1840's dance party venue; bottom right, my host Shelli and I.
 
 ### Places
 
