--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -1,10 +1,11 @@
 ---
 title: 'Summer in SF (2019)'
-date: 2019-09-13
-permalink: /posts/2019/9/blog-post-9/
+date: 2019-12-21
+permalink: /posts/2019/12/blog-post-10/
 tags:
   - san francisco
   - software engineering
+  - doordash
 ---
 
 Intro asdf
@@ -12,13 +13,16 @@ Intro asdf
 DoorDash
 ------
 
+I was so excited to intern at DoorDash, the market leader in food delivery and a fast-growing startup.
+
 San Francisco
 ------
+
+Being back in the city again was fine, except this time many of my Dartmouth and Blend friends who were here over the summer went back to school. From Sep 27 - Oct 31, I lived in the [Winsor Hotel](https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj_5szen7vlAhXUFn0KHYHgAzQYABAAGgJwdg&ohost=www.google.com&cid=CAESQOD2R7T-APRicWd4SRBx69NJh9yOQ8hOd5dmBIL5E4jsJcr7Vdl1PN1T2pMW5XIFCwSfrxCFWDaH7xsBz8vVxrI&sig=AOD64_3sPJjJPGYKvH87QvvIFx9BdEzqZQ&q=&ved=2ahUKEwjhksLen7vlAhXVsJ4KHdN2AHgQ0Qx6BAgQEAE&adurl=), a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
 
 ### Places
 
 * asdf
-
 
 <img src='/images/19x/lands_end.jpg' width="31%">
 <img src='/images/19x/muir.jpg' width="31%">
@@ -26,7 +30,15 @@ San Francisco
 
 Research
 ------
-asdf
+I didn't have enough time (i.e., wasn't self motivated enough) to do any projects by myself. My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper:
+
+<a href="https://arxiv.org/abs/1910.05827" style="color:#2C2CA8" target="_blank"><b>Generative Image Translation for Data Augmentation in Colorectal Histopathology Images</b></a> <br>
+Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei**, Saeed Hassanpour<br>
+*NeurIPS ML4H Workshop 2019* (acceptance rate: 19/111 = 17%) <br>
+<a href="https://github.com/BMIRDS/HistoGAN" style="color:#2C2CA8" target="_blank">[Github]</a>
+<img height="16" src="https://img.shields.io/github/stars/BMIRDS/HistoGAN.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/HistoGAN&link=https://github.com/BMIRDS/HistoGAN">
+
+As a high-school junior, my brother wrote a paper that was accepted into a competitive workshop, and I am so proud of him (hard work pays off). Saeed and I did not get a ticket to NeurIPS, however, but my brother did, and so he will be presenting. 
 
 Fitness
 ------
@@ -34,16 +46,30 @@ asdf
 
 Reading
 ------
-**Everything is F\*cked: A Book about Hope.**
+
+**The Last Lecture.** Randy Pausch, a computer science professor at CMU, gave a "last lecture" after being diagnosed with pancreatic cancer. 
+
+**Everything is F\*cked: A Book about Hope.** I was excited to read this book because I liked *The Subtle Art of Not Giving a F\*ck* so much. I had a hard time getting through the first half, which talked about this struggle between your feeling brain and your thinking brain (i.e., doing what feels good versus what you know is good in the long run). In the second half of the book, however, Manson brought to light many important concepts. 
+
+* **The Formula of Humanity**. Manson loves Immanuel Kant, who says that the supreme value in the universe is the thing that conceives of value itself (i.e., the humanity is the greatest value). And Manson's formula of humanity therefore states, "Act that you use humanity, whether in your own person or in the person of any other, always at the same time as an end, never merely as a means." Do something because it's the right thing to do, not beacuse of the outcome.
+* **Meditation.** Manson's account of [Quang Duc](http://100photos.time.com/photos/malcolm-browne-burning-monk) moved me, and he describes meditation as "observing the interiors of your mind and heart, in all their horror and glory." 
+* **Adulthood versus Adolescence**. While adolescents use principles as a means to get pleasure, adults value principles as ends in and of themselves. Manson defines adulthood as "the realization that sometimes an abstract principle is right and good for it's own sake, that even if it hurts you today, even if it hurts other, being honest is still the right thing to do."
+
+I plan to read this book again in the future and re-evaluate it.
+
+https://123movies.pics/movie/a-star-is-born/vxMTZvG2/zve5IX74-watch-online.html
+
 
 Who are my heroes?
 ------
 * Julianne Moore is great in Kingsman: The Golden Circle.
+* [Randy Pausch](https://www.youtube.com/watch?v=ji5_MqicxSo&t=313s) says, "Tell the truth. All the time."
+* [Mark Manson](https://markmanson.net/fuck-yes) has a law of *Fuck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
 
 Closing
 ------
 
-I really want to visit Cappadocia, Turkey.
+I want to visit Cappadocia, Turkey.
 
 Songs
 ------
