--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -13,7 +13,11 @@ Intro asdf
 DoorDash
 ------
 
-I was so excited to intern at DoorDash, the market leader in food delivery and a fast-growing startup.
+Interning at DoorDash, the market leader in food delivery, was so exciting.
+For my first project, I served a new carousel on our feed page, which took about six weeks. 
+The carousel retrieved the user's most recent order and recommended similar stores to the user. 
+I created the entire system end-to-end, beginning with developing the machine learning algorithm and creating an ETL, reading from recommendations from our database from our search service, and serving the carousel from the feed service.
+I worked pretty hard to get this done as fast and possible. Every week, I felt like I was leveling up.
 
 San Francisco
 ------
@@ -30,7 +34,11 @@ Being back in the city again was fine, except this time many of my Dartmouth and
 
 Research
 ------
-I didn't have enough time (i.e., wasn't self motivated enough) to do any projects by myself. My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper:
+I didn't have enough time (i.e., wasn't self motivated enough) to do any projects by myself. 
+My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper. 
+I am so proud of him and I hope he learned that hard work can pay off. 
+Saeed and I did not get a ticket to NeurIPS, however, but my brother did, and so he will be presenting. 
+I'm pretty jealous of him.
 
 <a href="https://arxiv.org/abs/1910.05827" style="color:#2C2CA8" target="_blank"><b>Generative Image Translation for Data Augmentation in Colorectal Histopathology Images</b></a> <br>
 Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei**, Saeed Hassanpour<br>
@@ -38,22 +46,38 @@ Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei
 <a href="https://github.com/BMIRDS/HistoGAN" style="color:#2C2CA8" target="_blank">[Github]</a>
 <img height="16" src="https://img.shields.io/github/stars/BMIRDS/HistoGAN.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/HistoGAN&link=https://github.com/BMIRDS/HistoGAN">
 
-As a high-school junior, my brother wrote a paper that was accepted into a competitive workshop, and I am so proud of him (hard work pays off). Saeed and I did not get a ticket to NeurIPS, however, but my brother did, and so he will be presenting. 
-
 Fitness
 ------
-asdf
+I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
+
+
 
 Reading
 ------
 
 **The Last Lecture.** Randy Pausch, a computer science professor at CMU, gave a "last lecture" after being diagnosed with pancreatic cancer. 
+I admire Pausch's communication so much. 
+Here are some of the pieces from his book and their takeaways (Chapter \#):
+
+- *Pouring soda in the backseat (15)*. People are more important than things.
+- *I'm on my honeymoon, but if you need me... (23)*. Time needs to be managed, like money.
+- *Dream big (28)*. Pausch grew up watching man land on the moon.
+- *Don't complain, just work harder (32)*.
+- *Be the first penguin (39)*. Take big risks.
+- *The lost art of thank-you notes (41)*.
+- *The friday night solution (43)*. **Q.** What was your secret to getting tenure early? **A.** "It's pretty simple, call me any Friday night in my office at ten o'clock and I'll tell you."
+- *Tell the truth (48)*. All the time.
+- *No job is beneath you (51)*. 
+- *All you have to do is ask (55)*. 
+- *Make a decision: Tigger or Eeyore (56)*. "I'm dying and I'm having fun... there's no other way to play it."
+
+His final remarks, which he addressed to his family, touched me dearly.
 
 **Everything is F\*cked: A Book about Hope.** I was excited to read this book because I liked *The Subtle Art of Not Giving a F\*ck* so much. I had a hard time getting through the first half, which talked about this struggle between your feeling brain and your thinking brain (i.e., doing what feels good versus what you know is good in the long run). In the second half of the book, however, Manson brought to light many important concepts. 
 
-* **The Formula of Humanity**. Manson loves Immanuel Kant, who says that the supreme value in the universe is the thing that conceives of value itself (i.e., the humanity is the greatest value). And Manson's formula of humanity therefore states, "Act that you use humanity, whether in your own person or in the person of any other, always at the same time as an end, never merely as a means." Do something because it's the right thing to do, not beacuse of the outcome.
-* **Meditation.** Manson's account of [Quang Duc](http://100photos.time.com/photos/malcolm-browne-burning-monk) moved me, and he describes meditation as "observing the interiors of your mind and heart, in all their horror and glory." 
-* **Adulthood versus Adolescence**. While adolescents use principles as a means to get pleasure, adults value principles as ends in and of themselves. Manson defines adulthood as "the realization that sometimes an abstract principle is right and good for it's own sake, that even if it hurts you today, even if it hurts other, being honest is still the right thing to do."
+- **The Formula of Humanity**. Manson loves Immanuel Kant, who says that the supreme value in the universe is the thing that conceives of value itself (i.e., the humanity is the greatest value). And Manson's formula of humanity therefore states, "Act that you use humanity, whether in your own person or in the person of any other, always at the same time as an end, never merely as a means." Do something because it's the right thing to do, not beacuse of the outcome.
+- **Meditation.** Manson's account of [Quang Duc](http://100photos.time.com/photos/malcolm-browne-burning-monk) moved me, and he describes meditation as "observing the interiors of your mind and heart, in all their horror and glory." 
+- **Adulthood versus Adolescence**. While adolescents use principles as a means to get pleasure, adults value principles as ends in and of themselves. Manson defines adulthood as "the realization that sometimes an abstract principle is right and good for it's own sake, that even if it hurts you today, even if it hurts other, being honest is still the right thing to do."
 
 I plan to read this book again in the future and re-evaluate it.
 
@@ -62,9 +86,10 @@ https://123movies.pics/movie/a-star-is-born/vxMTZvG2/zve5IX74-watch-online.html
 
 Who are my heroes?
 ------
-* Julianne Moore is great in Kingsman: The Golden Circle.
 * [Randy Pausch](https://www.youtube.com/watch?v=ji5_MqicxSo&t=313s) says, "Tell the truth. All the time."
-* [Mark Manson](https://markmanson.net/fuck-yes) has a law of *Fuck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
+* [Mark Manson](https://markmanson.net/fuck-yes) has a law of *F\*ck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
+* I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in a star is born.
+* Julianne Moore is great in *Kingsman: The Golden Circle*.
 
 Closing
 ------
@@ -73,6 +98,8 @@ I want to visit Cappadocia, Turkey.
 
 Songs
 ------
+- Lady Gaga: Shallow, Always Remember Us This Way
+- [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
 
 
 
